[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/img/city.png" type="Texture" id=1]
[ext_resource path="res://app/City.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 69.6083

[sub_resource type="DynamicFontData" id=2]
font_path = "res://assets/fonts/COUTURE-Bold.ttf"

[sub_resource type="DynamicFont" id=3]
font_data = SubResource( 2 )

[sub_resource type="DynamicFontData" id=4]
font_path = "res://assets/fonts/Sofia-Regular.otf"

[sub_resource type="DynamicFont" id=5]
font_data = SubResource( 4 )

[node name="City" type="StaticBody2D"]
position = Vector2( 252.975, 130.849 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="InfluenceLabel" type="Label" parent="."]
margin_left = -40.119
margin_top = -29.2658
margin_right = 39.881
margin_bottom = 30.7342
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.996078, 0.980392, 0, 1 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="Label" parent="."]
margin_left = -35.0662
margin_top = -94.1715
margin_right = 34.9338
margin_bottom = -74.1715
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.996078, 0.980392, 0, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReconvertTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true
[connection signal="timeout" from="ReconvertTimer" to="." method="_on_ReconvertTimer_timeout"]
